# Camp-Out

./: .gitignore  README.md  pyproject.toml
src/camp_out/: crew.py  main.py
src/camp_out/config/: agents.yaml  tasks.yaml
