[project]
name = "camp_out"
version = "0.1.0"
description = "camp-out using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
camp_out = "camp_out.main:run"
run_crew = "camp_out.main:run"
train = "camp_out.main:train"
replay = "camp_out.main:replay"
test = "camp_out.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
